--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "ts-standard"
   },
   "dependencies": {
     "react": "17.0.2",
@@ -15,7 +16,8 @@
     "@types/react": "17.0.33",
     "@types/react-dom": "17.0.10",
     "@vitejs/plugin-react": "1.0.7",
-    "typescript": "4.5.4",
+    "ts-standard": "11.0.0",
+    "typescript": "4.4.4",
     "vite": "2.8.0"
   },
   "engines": {
