--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "clsx": "1.1.1",
+    "deepmerge": "4.2.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
