--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "clsx": "1.1.1",
+    "deepmerge": "4.2.2",
+    "is-plain-object": "5.0.0",
     "nanoid": "3.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
