--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "jsx": "react-jsx",
     "paths": {
       "domain/*": ["./src/domain/*"]
-    }
+    },
+    "plugins": [{ "name": "typescript-plugin-css-modules" }]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
