--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vitejs/plugin-react": "1.0.7",
     "ts-standard": "11.0.0",
     "typescript": "4.4.4",
+    "typescript-plugin-css-modules": "3.4.0",
     "vite": "2.6.14",
     "vite-tsconfig-paths": "3.4.1"
   },
